fix(gtk320: toolbar): titlebar button paddding (to preserve square shape for the icons with small SPACING values

--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -150,6 +150,8 @@
 
         button {
             @include button($header_button_bg_color, $header_button_fg_color);
+
+            padding: $spacing ($spacing + 5px);
         }
 
         button.titlebutton + separator.titlebutton {
